# dsoal

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Makefile-mingw  Makefile.in  README.md  alext.h  appveyor.yml  buffer.c  capture.c  chorus.c  debug.c  dsound-mingw.def  dsound.def  dsound8.c  dsound_main.c  dsound_private.h  duplex.c  eax-presets.h  eax.c  eax.h  eax3.h  eax4.c  eax4.h  mingw.def  msvc.def  msvc64.def  primary.c  propset.c  readme.txt  regsvr.c  reverb.c  version.h.in  version.rc  voiceman.c
.github/workflows/: Development.yaml  Stable.yaml  Tagged.yaml  Untagged.yaml  default-ci.yaml
cmake/: FindOpenAL.cmake
fmt-11.1.1/: CMakeLists.txt
fmt-11.2.0/: CMakeLists.txt
src/: buffer.cpp  buffer.h  capture.cpp  capture.h  comhelpers.h  comptr.h  dsoal.cpp  dsoal.h  dsoal_global.h  dsoundoal.cpp  dsoundoal.h  eax.cpp  eax.h  enumerate.h  expected.h  factory.cpp  factory.h  fullduplex.cpp  fullduplex.h  guidprinter.h  logging.cpp  logging.h  primarybuffer.cpp  primarybuffer.h  propset.cpp  propset.h  vmanager.h
